Добавлена задача 2013_2, добавлена функция степени

--- a/.gitignore
+++ b/.gitignore
@@ -165,13 +165,13 @@ example/config/template_11.3.txt
 lib/.DS_Store
 lit/.DS_Store
 node_modules/
-task.pdf
+2013_2_task.pdf
 task_generator
 task_generator.dSYM/
 tasks/
 intelib/
-/template.txt
-!/template.txt
-!/task.pdf
-/task.pdf
-/answer.pdf
+/2013_2.txt
+!/2013_2.txt
+!/2013_2_task.pdf
+/2013_2_task.pdf
+/2013_2_answer.pdf
